update for my portfolio

--- a/myportfolio.html
+++ b/myportfolio.html
@@ -4,48 +4,37 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content='width=device-width,initial-scale=1.0'>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-
 	<!-- bootstrap css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
 	<!-- personalized css -->
-	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/styles.css"
 	<!-- javascript -->
 	<!-- jquery first then popper then bootstrap js -->
 	<!-- jquery -->
 	<script	src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 	<!-- popper -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-
 	<!-- bootsrap.js -->
 	<script type="text/javascript" src="./assets/js/bootstrap.js"></script>
 	<title></title>
 </head>
 <body background="assets/img/background.jpg">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 offset-lg-3">
-				<ul class="navs">
-					<li><a href="about/index.html"><strong>ABOUT</strong></a></li>
-					<li><a href=""><strong>CONTACT</strong></a></li>
-					<li><a href=""><strong>SKILLS</strong></a></li>					
-					<li><a href=""><strong>PORTFOLIO</strong></a></li>			
-				</ul>
-			</div>
+	<div  class="container">
+		<div class="navmenu">
+   			<a href=""><strong>ABOUT ME</strong></a>
+  			<a href=""><strong>CONTACT</strong></a>
+  			<a href=""><strong>SKILLS</strong></a>
+  			<a href=""><strong>PORTFOLIOS</strong></a>  			
+		</div> 
+		<div class="header">
+			<a href="#about"><img src="./assets/img/tom.jpg"></a>
+			<h1><a href="#about">CELEDONIO MOJICO JR.</a></h1>
+			<h2>WEB DESIGNER | WEB DEVELOPER</h2>
+			
 		</div>
-		<img src="assets/img/tom.jpg" alt="My picture" >
-		<h1><b>Celedonio Mojico Jr.</b></h1>
-		<p style="color:orange;">________________</p>
-		<h3><b>Web Designer | Web Developer</b></h3>
-		<div class="footer">
-			<div class="col-lg-12">
-				<footer>
-					All rights reserved &copy; 2018<br>
-					
-
-				</footer>
-			</div>
-		</div>
-
+			
+		
+		
 		
 	</div>
 
