--- a/home.html
+++ b/home.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
 	<!-- personalized css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/home.css"
+	<link rel="stylesheet" type="text/css" href="assets/css/animate.css"
 	<!-- javascript -->
 	<!-- jquery first then popper then bootstrap js -->
 	<!-- jquery -->
@@ -58,11 +59,72 @@
 	<div class="container-fluid text-center">
 		<div class="me">
 			<a href=""><img src="assets/img/me.jpg" alt="my picture"></a>
-		<h1><a href="">Don Mojico</a></h1>
-		<h3>Web Developer</h3>
+			<h1><a href="">Don Mojico</a></h1>
+			<h3>Web Developer</h3>
 		</div>
 	</div>
-	<section class="p-5" id="about">
+
+	<div class="container-fluid" id="about">
+		<div class="row">				
+			<div class="col-md-6 text-left">
+				<h1>About</h1>
+			</div>
+			<div class="col-md-6">
+				<p>I'm 26 yrs. old. From Naga City, Bicol. A graduate of Bachelor of Science in Computer Engineering at STI College Naga. Currently training at Tuitt Coding Bootcamp for Web Development.</p>
+			</div>
+		</div>
+		<div class="row" id="contact">
+			<div class="col-md-2">
+				<h1>Contact</h1>
+			</div>	
+			
+			<div class="col-md-6 text-center">
+				<div><h4> Contact Information</h4></div>
+				<ul class="list-unstyled frame">
+					<li><i class="fa fa-map-marker fa-2x"></i>
+						<p>27D Masikap st. Diliman, Quezon City</p>
+					</li>
+					<li><i class="fa fa-phone mt-4 fa-2x"></i>
+						<p>+63 9183 924295</p>
+					</li>
+					<li><i class="fa fa-envelope mt-4 fa-2x"></i>
+						<p>mojicodon@yahoo.com</p>
+					</li>
+				</ul>
+			</div>
+
+			<div class="col-md-4">
+				<div><h4> Social Media Accounts</h4></div>
+				<ul class="list-unstyled frame">
+					<li><i class="fa fa-map-marker fa-2x"></i>
+						<p>Facebook</p>
+					</li>
+					<li><i class="fa fa-phone mt-4 fa-2x"></i>
+						<p>LinkedIn</p>
+					</li>					
+				</ul>
+			</div>
+		</div>
+		<div class="row">				
+			<div class="col-md-6 text-left">
+				<h1>Portfolio</h1>
+			</div>
+			<div class="col-md-6">
+				<p>I'm 26 yrs. old. From Naga City, Bicol. A graduate of Bachelor of Science in Computer Engineering at STI College Naga. Currently training at Tuitt Coding Bootcamp for Web Development.</p>
+			</div>
+		</div>
+		<div class="row">				
+			<div class="col-md-6 text-right">
+				<h1>Skills</h1>
+			</div>
+			<div class="col-md-6">
+				<p>I'm 26 yrs. old. From Naga City, Bicol. A graduate of Bachelor of Science in Computer Engineering at STI College Naga. Currently training at Tuitt Coding Bootcamp for Web Development.</p>
+			</div>
+		</div>
+	</div>
+	
+
+	<!-- <section class="p-5" id="about">
 				<h2 class="col col-sm-3 text-center mb-5 about-tags">About Me</h2>
 				<p class="col col-sm-4 text-justify lead">I'm 26 yrs. old. From Naga City, Bicol. A graduate of Bachelor of Science in Computer Engineering at STI College Naga. Currently training at Tuitt Coding Bootcamp for Web Development. </p>
 				
@@ -93,30 +155,11 @@
 				<p class="text-justify lead">To become the most preferred place for Computer & Internet usage, such us Web browsing, Chat, Email, and most especially for computer gaming; and so as to become the most preferred place for any computer works, such us printing (document & photo), scan, and a lot more computer services, full at all times, providing an excellent experience anytime.</p>
 				
 			</section>
+		-->
 
-	<!-- <div class="container-fluid">
-		<div class="row me">
-			<div class="container-fluid col-lg-12">
-				<div class="maincontent text-center col-lg-12">
-					<a href="about.html"><img src="assets/img/me.jpg"></a>
-					<a href="about.html"><h1 class="maincontent-text">Celedonio Mojico Jr.</h1></a>
-					<h3 class="maincontent-text">Full Stack Web Developer</h3>
-				</div>
-			</div>
-		</div>
-		<div class="row about">
-			<div class="col-lg-6 text-center">
-				<h1 class="maincontent-text p-4">About<br> Me</h1>
-			</div>
-			<div class="col-lg-6 text-left">				
-				<p class="maincontent-text">I'm 26 years old. A graduate of Bachelor of Science in Computer Engineering at STI College Naga. I'm currently training for a coding bootcamp at Tuitt Inc to pursue my dream in web programming and development.</p>			
-			</div>
-		</div>		
-	</div> -->
-
-	<div class="parallax"></div>
+		<div class="parallax"></div>
 
 
 
-</body>
-</html>
+	</body>
+	</html>
