--- a/home.html
+++ b/home.html
@@ -106,7 +106,7 @@
 								</div>
 								
 								<div class="col-sm-12">
-									<div><a href=""><i class="fa fa-github fa-3x" aria-hidden="true"></i></a></div><div>www.github</div><br>
+									<div><a href="https://celedoniomojicojr.github.io/capstone1/landingpage.html"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a></div><div>www.github</div><br>
 								</div>
 								<div class="col-sm-12">
 									<div><a href=""><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a></div><div>www.linkedin/mojico.c</div><br>
