--- a/home.html
+++ b/home.html
@@ -38,10 +38,10 @@
 								<a class="nav-link" href="#about"><i class="fa fa-fw fa-user"></i>ABOUT ME</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href=""><i class="fa fa-fw fa-phone"></i>CONTACT</a>
+								<a class="nav-link" href="#contact"><i class="fa fa-fw fa-phone"></i>CONTACT</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href=""><i class="fa fa-fw fa-file-photo-o"></i>PORTFOLIO</a>
+								<a class="nav-link" href="https://celedoniomojicojr.github.io/capstone1/landingpage.html"><i class="fa fa-fw fa-file-photo-o"></i>PORTFOLIO</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href=""><i class="fa fa-fw fa-asterisk"></i>SKILLS</a>
