--- a/home.html
+++ b/home.html
@@ -57,6 +57,7 @@
 							</div>
 						</div>
 						<div class="row">
+							<img src="">
 							<div class="col-sm-12 text-center">
 								<h2>Don Mojico</h2>
 								<h4>Full Stack Web Developer</h4>
@@ -126,7 +127,7 @@
 										</div>
 									</div>
 
-									<div class="col-sm-4"><div>JavaScript</div>Bootstrap Framework
+									<div class="col-sm-4"><i class="fa fa-jsfiddle fa-2x" aria-hidden="true"></i><div>JavaScript</div>Bootstrap Framework
 										<div class="progress">
 											<div class="progress-bar progress-bar-striped bg-primary" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
 										</div>
