--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
 								<a class="nav-link" href="https://celedoniomojicojr.github.io/capstone1/landingpage.html"><i class="fa fa-fw fa-file-photo-o"></i>PORTFOLIO</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href=""><i class="fa fa-fw fa-asterisk"></i>SKILLS</a>
+								<a class="nav-link" href="#skills"><i class="fa fa-fw fa-asterisk"></i>SKILLS</a>
 							</li>
 						</ul>
 					</div>
@@ -70,7 +70,7 @@
 					</div>
 					<div class="row">							
 							<div class="col-sm-12 offset-sm-3text-justify">
-								<p>A graduate of Bachelor of Science in Computer Engineering at STI College Naga.</p>
+								<p>A graduate of Bachelor of Science in Computer Engineering at STI College Naga. I'm currently training at Tuitt for Web Design and Development.</p>
 							</div>
 						</div>
 					<div id="about">						
@@ -118,7 +118,7 @@
 					<div class="col-sm-12">
 						<h2>Skills</h2>
 					</div>
-					<div class="row">
+					<div id="skills" class="row">
 							<div class="col col-sm-12">
 								<div class="row">			
 									<div class="col-sm-4"><i class="fa fa-html5 fa-2x" aria-hidden="true"></i><div>HTML 5</div>15 Activity Designs 
